%% D2.4 Runtime Instances and Encounter State (Mermaid mirror)
classDiagram

namespace RuntimeState {
  class EffectInstanceRuntime {
    +id: str
    +effect_id: str
    +name: str
    +source_id: str
    +target_id: str
    +type: EffectType
    +target_stat: str
    +value: int | str
    +duration_type: DurationType
    +remaining_rounds: int | None
    +tick_intent: dict
    +requires_concentration: bool
  }

  class ConditionInstance {
    +condition: ConditionType
    +source_id: str
    +source_effect_id: str
    +remaining_rounds: int | None
  }

  class ItemInstance {
    +id: str
    +definition_slug: str
    +custom_name: str | None
    +quantity: int
    +equipped: bool
    +attuned: bool
    +current_charges: int | None
    +max_charges: int | None
  }

  class PreparedSpell {
    +spell_slug: str
    +always_prepared: bool
  }

  class SpellcastingState {
    +slots: dict[int, SpellSlots]
    +prepared_spells: list[PreparedSpell]
    +spellcasting_ability: Ability | None
    +spell_save_dc: int
    +spell_attack_bonus: int
  }

  class ConcentrationState {
    +is_concentrating: bool
    +effect_id: str | None
  }

  class ResourcePool {
    +counters: dict[str, ResourceCounter]
  }

  class ActorInstance {
    +id: str
    +owner_user_id: str | None
    +definition_slug: str
    +name: str
    +actor_type: ActorType
    +abilities: AbilityScores
    +current_hp: int
    +max_hp: int
    +temp_hp: int
    +armor_class: int
    +speed: SpeedBlock
    +proficiency_bonus: int
    +position: Position
    +conditions: list[ConditionInstance]
    +effects: list[EffectInstanceRuntime]
    +inventory: list[ItemInstance]
    +spellcasting: SpellcastingState | None
    +resources: ResourcePool
    +concentration: ConcentrationState
    +exhaustion_level: int
    +saving_throw_proficiencies: list[Ability]
    +skill_proficiencies: list[str]
  }

  class MapToken {
    +actor_id: str
    +position: Position
    +size: Size
  }

  class MapState {
    +width: int
    +height: int
    +grid_type: str
    +difficult_terrain: list[Position]
    +tokens: list[MapToken]
  }

  class EncounterState {
    +id: str
    +campaign_id: str
    +round_number: int
    +turn_phase: str
    +active_index: int
    +combatants: list[ActorInstance]
    +turn_budgets: dict[str, dict]
    +global_effects: list[EffectInstanceRuntime]
    +map: MapState
  }
}

ActorInstance --> ConditionInstance : owns [0..*]
ActorInstance --> EffectInstanceRuntime : owns [0..*]
ActorInstance --> ItemInstance : owns [0..*]
ActorInstance --> SpellcastingState : owns [0..1]
ActorInstance --> ResourcePool : owns
ActorInstance --> ConcentrationState : owns
SpellcastingState --> PreparedSpell : owns [0..*]
MapState --> MapToken : owns [0..*]
EncounterState --> ActorInstance : owns [0..*]
EncounterState --> EffectInstanceRuntime : owns [0..*]
EncounterState --> MapState : owns
MapToken --> ActorInstance : references actor_id
